--- a/app/views/entries/friends_entries.html.erb
+++ b/app/views/entries/friends_entries.html.erb
@@ -2,26 +2,26 @@
   <h2>My Friend Entries</h2>
   <% @entries.each do |entry| %>
     <section
-      class="<%= 'entries__index-' + mood_group(entry.emotion)%> entries__index-entry-container entry-click"
+      class="<%= 'entries__index-' + mood_group(entry.emotion) %> entries__index-entry-container entry-click"
       data-url="<%= friend_entry_show_path(entry) %>">
       <div class="entries__index-entry-header">
         <div class="entries__index-entry-header-left">
           <p><%= entry.created_at.strftime("%a %b %-d %l:%M %p") %></p>
 
           <div class="entries__index-entry-header-left-tags-container">
-            <% all_tags = JSON.parse(entry.company) + JSON.parse(entry.activity) + JSON.parse(entry.location)%>
+            <% all_tags = JSON.parse(entry.company) + JSON.parse(entry.activity) + JSON.parse(entry.location) %>
             <% all_tags.each do |tag| %>
               <% unless tag == "0" %>
-                <p><%=tag %></p>
+                <p><%= tag %></p>
               <% end %>
             <% end %>
           </div>
         </div>
 
-        <div class="entries__index-entry-header-right">
-          <p><%= entry.user.username %></p>
-          <%= image_tag(entry.user.profile_picture, class: "friends_entries_avatar") %>
-        </div>
+        <!--        <div class="entries__index-entry-header-right">-->
+        <%#= image_tag(entry.user.profile_picture, class: "friends_entries_avatar") %>
+        <!--          <p><%#= entry.user.username %></p>-->
+        <!--        </div>-->
       </div>
 
       <div class="entries__index-entry-footer">
@@ -31,8 +31,10 @@
         </div>
 
         <div class="entries__index-entry-footer-right">
-
+          <%= image_tag(entry.user.profile_picture, class: "friends_entries_avatar") %>
+          <p><%= entry.user.username %></p>
         </div>
+      </div>
       </div>
 
 
@@ -74,18 +76,19 @@
 
 
 <div class="header-actions">
-  <%=  link_to 'My entries', entries_path , class: 'new-entry-button' %>
-  <%=  link_to 'Dashboard', dashboard_index_path , class: 'new-entry-button' %>
+  <%= link_to 'My entries', entries_path, class: 'new-entry-button' %>
+  <%= link_to 'Dashboard', dashboard_index_path, class: 'new-entry-button' %>
 
 </div>
 
 <div class="entries-container">
   <% @entries.each do |entry| %>
     <div class="entry-card">
-      <h3><% if entry.user.profile_picture.attached? %>
-        <%= image_tag url_for(entry.user.profile_picture), width: 50, height: 50, 
-        alt:"#{entry.user.username}",
-        class: "friend-profile-picture"  %>
+      <h3>
+        <% if entry.user.profile_picture.attached? %>
+          <%= image_tag url_for(entry.user.profile_picture), width: 50, height: 50,
+                        alt: "#{entry.user.username}",
+                        class: "friend-profile-picture" %>
         <% end %> <%= entry.user.username %></h3>
       <p><strong>Entry:</strong> <%= entry.text.truncate(50) %></p>
 
@@ -103,30 +106,29 @@
         <% end %>
       </div>
 
-       <%= link_to 'Comment', new_entry_comment_path(entry), class: "btn btn-primary btn-sm" %>
+      <%= link_to 'Comment', new_entry_comment_path(entry), class: "btn btn-primary btn-sm" %>
 
-      <div class="entry-comments" >
-       <% entry.comments.each do |comment| %>
-        <p>
-         <strong><%= comment.user.username %>: </strong>
-          <%= comment.text %> 
-          <span>
-          <% if comment.user == current_user %>
+      <div class="entry-comments">
+        <% entry.comments.each do |comment| %>
+          <p>
+            <strong><%= comment.user.username %>: </strong>
+            <%= comment.text %>
+            <span>
+              <% if comment.user == current_user %>
            <%= link_to entry_comment_path(entry, comment), class: "btn btn-primary btn-sm" do %>
             <i class="bi bi-eye"></i> 
-          <% end %>
-          </span>
-          <span>
-           <%= button_to entry_comment_path(entry, comment), method: :delete, class: "btn btn-danger btn-sm" do%>
-             <i class="bi bi-trash"></i> 
-           </span><% end %>
-        </p>
+          <% end %></span>
+
+                <span><%= button_to entry_comment_path(entry, comment), method: :delete, class: "btn btn-danger btn-sm" do %><i class="bi bi-trash"></i></span>
+                  <% end %>
+                  </p>
+
+              <% end %>
         <% end %>
-        <% end %>
-       </div>
-      
+      </div>
+
     </div>
-    <%end%>
+  <% end %>
 </div>
 
 <script>
