fixed test for entries

--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -39,7 +39,7 @@
       <p>Comments</p>
       <% @entry.comments.each do |comment| %>
         <div class="entries__show-comment-container">
-          <p><%= comment.user.email %></p>
+          <p><%= comment.user.username %></p>
           <p><%= comment.text %></p>
         </div>
       <% end %>
