Add dashboard option to create entry

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -3,7 +3,8 @@
   <div class="dashboard__spinner"></div>
   <div class="dashboard__create-entry-container">
     <div class="dashboard__entry-create">
-      <p class="dashboard__plus">﹢</p>
+
+      <%=link_to "﹢", new_entry_path, class: "dashboard__plus" %>
     </div>
     <p>Check in</p>
   </div>
