--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -69,12 +69,30 @@
   gap: 30px
 }
 
-.app__navbar_left button {
+.plus-nav-container {
   border: none;
-  border-radius: 50px;
-  padding: 10px;
-  width: 150px;
-  background-color: #D9D9D9;
+  border-radius: 100px;
+  width: 50px;
+  height: 50px;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.plus-nav {
+  text-decoration: none;
+  color: black;
+  font-size: 30px;
+
+
+}
+
+.app__navbar_left_extra_buttons {
+  display: flex;
+  align-items: center;
+  gap: 20px
 }
 
 .app__navbar_left .navbar-btn {
@@ -172,10 +190,11 @@
 }
 
 
-.dashboard__entry-create p {
-  color: black;
+.dashboard__entry-create .dashboard__plus {
   font-size: 60px !important;
-  margin-top: 20px;
+  margin-top: 5px;
+  text-decoration: none;
+  color: black;
   position: absolute;
 }
 
