--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -785,7 +785,7 @@ h1 {
 }
 
 //log in and sign up styles ------------------------------
-.card {
+.login-card {
   background-color: #000000;
   color: #d4cbcb;
   width: 30%;
