Modify comment controller to allow for user to delete comments on user post"

--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,8 +1,4 @@
 <section class=" entries__show-content-container">
-  <div class="entries__show-emotion-symbol">
-    placeholder
-  </div>
-
   <div class="entries__show-emotion-header">
     <p>I'm feeling</p>
     <p class="entries__show-emotion-label"><%= @entry.emotion %></p>
@@ -14,10 +10,10 @@
     </div>
 
     <div class="entries__show-tags-container">
-      <% all_tags = JSON.parse(@entry.company) + JSON.parse(@entry.activity) + JSON.parse(@entry.location)%>
+      <% all_tags = JSON.parse(@entry.company) + JSON.parse(@entry.activity) + JSON.parse(@entry.location) %>
       <% all_tags.each do |tag| %>
         <% unless tag == "0" %>
-          <p><%=tag %></p>
+          <p><%= tag %></p>
         <% end %>
       <% end %>
     </div>
@@ -31,50 +27,38 @@
   <div class="entries__show-options-container">
     <button>Private</button>
     <%= link_to 'Edit', edit_entry_path(@entry), class: 'btn' %>
-    <%= link_to 'Delete', entry_path(@entry), class:'btn', data: {turbo_method: :delete} %>
+    <%= link_to 'Delete', entry_path(@entry), class: 'btn', data: { turbo_method: :delete } %>
   </div>
 
-  <% if @comments.present? %>
+
+  <% if @entry.comments.present? %>
     <div class="entries__show-comments-container">
       <p>Comments</p>
       <% @entry.comments.each do |comment| %>
         <div class="entries__show-comment-container">
-          <p><%= comment.user.username %></p>
-          <p><%= comment.text %></p>
+          <div class="entries__show-comment-container-start">
+            <%= image_tag(comment.user.profile_picture) %>
+            <p><%= comment.user.username %>:</p>
+          </div>
+
+          <div class="entries__show-comment-container-text">
+            <p><%= comment.text %></p>
+          </div>
+
+          <div class="entries__show-comment-container-end">
+              <%= link_to entry_comment_path(@entry, comment), class: "btn btn-primary btn-sm" do %>
+                <i class="bi bi-eye"></i>
+              <% end %>
+
+
+              <%= button_to entry_comment_path(@entry, comment), method: :delete, class: "btn btn-danger btn-sm" do %>
+                <i class="bi bi-trash"></i>
+              <% end %>
+          </div>
         </div>
       <% end %>
     </div>
   <% end %>
-
-  <div class="entries__show-comments-container">
-    <p>Comments</p>
-    <% @entry.comments.each do |comment| %>
-      <div class="entries__show-comment-container">
-        <div class="entries__show-comment-container-start">
-          <%= image_tag(comment.user.profile_picture) %>
-          <p><%= comment.user.username %>:</p>
-        </div>
-
-        <div class="entries__show-comment-container-text">
-          <p><%= comment.text %></p>
-        </div>
-
-        <div class="entries__show-comment-container-end">
-          <% if (comment.user == current_user) %>
-
-            <%= link_to entry_comment_path(@entry, comment), class: "btn btn-primary btn-sm" do %>
-              <i class="bi bi-eye"></i>
-            <% end %>
-
-
-            <%= button_to entry_comment_path(@entry, comment), method: :delete, class: "btn btn-danger btn-sm" do %>
-              <i class="bi bi-trash"></i>
-            <% end %>
-          <% end %>
-        </div>
-      </div>
-    <% end %>
-  </div>
 
 
   <div class="entries__show-blob">
