Add search functionality and search tests"

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -379,6 +379,40 @@ body.entries__show-low-energy-unpleasant .entries__show-emotion-label  {
   color: var(--low_unpleasant_text_base)
 }
 
+.entries__dashboard-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.entries__dashboard-options {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  width: 100%;
+  cursor: pointer;
+}
+
+.entries__dashboard-option {
+  border: 1px solid white;
+  border-radius: 5px;
+  display: flex;
+  height: 150px;
+  width: 100%;
+  max-width: 600px;
+  justify-content: center;
+  align-items: center;
+}
+
+.entries__dashboard-option p {
+  font-size: 25px;
+  color: white;
+}
+
 .entries__show-content-container {
   display: flex;
   align-items: center;
@@ -757,6 +791,86 @@ input[type="checkbox"]:checked + .entries__new-tag-label {
 }
 
 
+//----------------- search styles
+
+.entries__search-container {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+
+.entries__search-form-container {
+  display: flex;
+  gap: 10px;
+  max-width: 700px;
+  margin: auto;
+  padding: 0 10px;
+
+}
+
+.entries__search-field {
+  background-color: black;
+  color: white;
+  border: none;
+  border-bottom: solid white 1px;
+  font-style: italic;
+  outline: none;
+  width: 100%;
+  font-size: 25px;
+}
+
+.entries__search-button {
+  background-color: black;
+  border: solid 1px white;
+  color: white;
+  border-radius: 10px;
+  padding: 5px;
+}
+
+
+//log in and sign up styles ------------------------------
+.login-card {
+  background-color: #000000;
+  color: #d4cbcb;
+  width: 30%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.card-header {
+  margin-left: 30%;
+}
+
+.login {
+  background-color: black;
+  color: white;
+  width: 100%;
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 5px 10px;
+  margin-top: 20px;
+  margin-bottom: 100px;
+  max-width: 600px;
+}
+
+.sign-up {
+  background-color: black;
+  color: white;
+  width: 100%;
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 5px 10px;
+  margin-top: 20px;
+  margin-bottom: 100px;
+  max-width: 600px;
+
+}
+
 
 
 //-------------------- old styles
@@ -879,43 +993,3 @@ h1 {
 
 }
 
-//log in and sign up styles ------------------------------
-.login-card {
-  background-color: #000000;
-  color: #d4cbcb;
-  width: 30%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 100px;
-  margin-bottom: 100px;
-}
-
-.card-header {
-  margin-left: 30%;
-}
-
-.login {
-  background-color: black;
-  color: white;
-  width: 100%;
-  border: 1px solid white;
-  border-radius: 10px;
-  padding: 5px 10px;
-  margin-top: 20px;
-  margin-bottom: 100px;
-  max-width: 600px;
-}
-
-.sign-up {
-  background-color: black;
-  color: white;
-  width: 100%;
-  border: 1px solid white;
-  border-radius: 10px;
-  padding: 5px 10px;
-  margin-top: 20px;
-  margin-bottom: 100px;
-  max-width: 600px;
-
-}
