--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,7 +42,7 @@
   --low_unpleasant_base: #1a1c2c;
 
   --high_pleasant_text_base: #fbd454;
-  --low_pleasant_text_base:  #9bfb54;
+  --low_pleasant_text_base: #9bfb54;
   --high_unpleasant_text_base: #fb5454;
   --low_unpleasant_text_base: #547bfb;
 
@@ -304,6 +304,7 @@
   align-items: center;
   width: 100px;
 }
+
 .entries__index-entry-footer-left p {
   margin: 0;
   font-size: 30px;
@@ -375,7 +376,7 @@ body.entries__show-low-energy-unpleasant {
   background: linear-gradient(0deg, #1a252c 0%, #000000 100%);
 }
 
-body.entries__show-low-energy-unpleasant .entries__show-emotion-label  {
+body.entries__show-low-energy-unpleasant .entries__show-emotion-label {
   color: var(--low_unpleasant_text_base)
 }
 
@@ -638,7 +639,7 @@ body.entries__show-low-energy-unpleasant .entries__show-emotion-label  {
   color: white;
 }
 
-.entries__new-header  {
+.entries__new-header {
   color: white;
   border: 1px solid;
   width: 100%;
@@ -770,7 +771,7 @@ input[type="checkbox"]:checked + .entries__new-tag-label {
   max-width: 600px;
 }
 
-.entries__edit-header  {
+.entries__edit-header {
   display: flex;
   justify-content: center;
   color: white;
@@ -872,7 +873,6 @@ input[type="checkbox"]:checked + .entries__new-tag-label {
 }
 
 
-
 //-------------------- old styles
 
 html {
@@ -970,26 +970,50 @@ h1 {
 }
 
 .delete-button:hover {
-    background-color: #c82333;
+  background-color: #c82333;
+}
+
+.friendships__index-friend-list-container {
 }
 
 .friend-list {
-    list-style: none;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+}
 
+.friendships__index-friend-card {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 700px;
+  padding: 20px;
 }
 
 .a-friend {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding: 10px;
-    border-bottom: 1px solid #ddd;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
+  width: 500px;
+  justify-content: space-between;
+  border-bottom: 1px solid #ddd;
+  margin: auto;
 }
+
+.friendships__show-container {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+}
+
 
 .friend-profile-picture {
-    border-radius: 50%;
-    object-fit: cover;
-
+  border-radius: 10px;
+  object-fit: cover;
 }
+
+
 
