--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,15 +8,15 @@
 
     <div class="app__navbar_left_extra_buttons">
       <%= link_to 'Profile', profile_path, class: 'navbar-btn' %>
-      <%= link_to 'My Entries', entries_path, class: 'navbar-btn' %>
-      <%= link_to 'My Friends', friend_entries_path, class: 'navbar-btn' %>
+      <%= link_to 'My Entries', dashboard_entries_path, class: 'navbar-btn' %>
+      <%= link_to 'My Friends', friend_dashboard_entries_path, class: 'navbar-btn' %>
 
-      <%# if current_user.notification&.persisted? %>
-      <%#= link_to 'Reminders', notification_path(current_user.notification), class: 'navbar-btn' %>
-      <%# else %>
+      <% if current_user.notification&.persisted? %>
+      <%= link_to 'Reminders', notification_path(current_user.notification), class: 'navbar-btn' %>
+      <% else %>
 
-      <%#= link_to 'Reminders', new_notification_path, class: 'navbar-btn' %>
-      <%# end %>
+      <%= link_to 'Reminders', new_notification_path, class: 'navbar-btn' %>
+      <% end %>
 
       <%= link_to 'Sign out', destroy_user_session_path, data: { turbo_method: :delete }, class: 'navbar-btn' %>
 
