--- a/app/views/users/friend_profile.html.erb
+++ b/app/views/users/friend_profile.html.erb
@@ -7,34 +7,20 @@
       <div class="card">
         <div class="card-body text-center">
           <h3 class="card-title"><%= @user.username %></h3>
-
           <% if @user.profile_picture.attached? %>
             <%= image_tag @user.profile_picture, class: "img-fluid rounded-circle", alt: "Profile picture of #{@user.username}", style: "width: 150px; height: 150px; object-fit: cover;"  %>
           <% else %>
             <%= image_tag 'default.png', class: "img-fluid rounded-circle", alt: "Default profile picture" %>
           <% end %>
-        
-          <%= form_with model: @user, url: upload_profile_picture_user_path(@user), method: :patch, local: true, enctype: "multipart/form-data" do |f| %>
-            <div class="form-group mt-3">
-              <%= f.file_field :profile_picture, class: 'form-control', required: true %>
-            </div>
-            <%= f.submit 'Upload Picture', class: 'btn btn-primary mt-3' %>
-          <% end %>
         </div>
       </div>
     </div>
-
 
     <div class="col-md-8">
       <div class="card">
         <div class="card-body">
           <h4>Bio</h4>
-          <%= form_with model: @user, url: update_bio_user_path(@user), method: :patch do |f| %>
-            <div class="form-group">
-              <%= f.text_area :bio, class: 'form-control', rows: 5, placeholder: "No bio yet" %>
-            </div>
-            <%= f.submit 'Update Bio', class: 'btn btn-primary mt-2' %>
-          <% end %>
+          <p><%= @user.bio.present? ? @user.bio : "No bio yet" %></p>
         </div>
       </div>
     </div>
@@ -60,13 +46,13 @@
     <div class="col-md-8">
       <div class="card">
         <div class="card-body">
-          <h4 class="mt-4">Your Entries</h4>
+          <h4 class="mt-4">Entries</h4>
           <% @user.entries.each do |entry| %>
             <div class="card mb-3">
               <div class="card-body">
                 <p><%= entry.text %></p>
                 <small><%= entry.created_at.strftime("%B %d, %Y") %></small>
-                
+
                 <div class="comments-section mt-3">
                   <h5>Comments</h5>
                   <div class="comments-container" style="max-height: 200px; overflow-y: auto;">
