--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -46,17 +46,18 @@
           </div>
 
           <div class="entries__show-comment-container-end">
-            <% if (comment.user = current_user) %>
+            <% if (comment.user == current_user ) %>
 
               <%= link_to entry_comment_path(@entry, comment), class: "btn btn-primary btn-sm" do %>
                 <i class="bi bi-eye"></i>
               <% end %>
-
-
-              <%= button_to entry_comment_path(@entry, comment), method: :delete, class: "btn btn-danger btn-sm" do %>
+            <% end %>
+            <% if comment.user  == current_user || @entry.user == current_user %>
+              <%= button_to destroy_another_entry_comment_path(@entry, comment), method: :delete, class: "btn btn-danger btn-sm", data: { turbo: false } do %>
                 <i class="bi bi-trash"></i>
               <% end %>
-            <% end %>
+              <% end %>
+           
           </div>
         </div>
       <% end %>
