--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -919,3 +919,88 @@ h1 {
   max-width: 600px;
 
 }
+
+//comments styles ------------------------------
+
+.comments-show {
+    color: white;
+    background-color: rgba(126, 132, 128, 0.2);
+    border-radius: 10px;
+    padding: 30px;
+    width: 100%;
+    max-width: 600px;
+    display: block;
+    align-items: center;
+    margin: auto;
+}
+
+.comment-btn-group {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.comment-btn {
+  padding: 5px;
+  width: 100%;
+  background-color: rgba(126, 132, 128, 0.2);
+  border: white solid 1px;
+  color: white;
+  border-radius: 10px;
+  font-size: 15px;
+  text-align: center;
+  text-decoration: none;
+  margin-top: 10px;
+}
+
+.delete-comment-btn {
+  padding: 5px 30px;
+  width: 100%;
+  background-color: rgba(212, 59, 59, 0.2);
+  border: white solid 1px;
+  color: white;
+  border-radius: 10px;
+  font-size: 15px;
+  text-align: center;
+  text-decoration: none;
+  margin-top: 10px;
+}
+
+.comments-new {
+    color: white;
+    background-color: rgba(126, 132, 128, 0.2);
+    border-radius: 10px;
+    padding: 30px;
+    width: 100%;
+    max-width: 600px;
+    display: block;
+    align-items: center;
+    margin: auto;
+}
+
+.comment-field-box {
+  width: 100%;
+  max-width: 600px;
+  background-color: rgba(126, 132, 128, 0.2);
+  border: 1px white solid;
+  border-radius: 10px;
+  color: white;
+  padding: 5px;
+  text-decoration: none;
+}
+
+.comment-field {
+  background: none;
+  border: none;
+  outline: none;
+  resize: none;
+  overflow: auto;
+  width: 100%;
+  height: 125px;
+  color: rgb(197, 191, 191);
+}
+
+.comment-field:focus {
+  outline: none;
+}
+
