--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,10 +1,7 @@
 
 <h1>New comment</h1>
 
+<div class="comments-new" >
 <%= render "form", comment: @comment %>
 
-<br>
-
-<div>
-   <%= link_to 'Friends Entries', friend_entries_path, class: "btn btn-secondary btn-sm" %>
 </div>
