--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -115,7 +115,15 @@
   height: 60px;
   justify-content: center;
   align-items: center;
-  background-color: #D9D9D9;
+
+}
+
+.avatar_container img {
+  object-fit: contain;
+  width: 80px;
+  height: 80px;
+  border-radius: 100px;
+  border: 2px solid white;
 }
 
 //dashboard styles ------------------------------
@@ -124,9 +132,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 70px;
+  margin-top: 40px;
   position: relative;
-  gap: 20px
+  gap: 10px
 }
 
 .dashboard__main-container p {
@@ -153,6 +161,11 @@
   to {
     transform: rotate(1turn)
   }
+}
+
+.dashboard-streak-text {
+  font-style: italic;
+  font-size: 15px !important;
 }
 
 .dashboard__create-entry-container {
